Fixed Spacing

--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@
 #right-header{
     display: inline-block;
     float: right;
-    margin-right: 10px;
+    padding: 20px;
+    margin-right: 100px;
+    margin-top: 10px;
 }
 
 #search{
